<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal|top"
    tools:context=".fragments.AddBook">

    <LinearLayout
        android:id="@+id/eancontainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="@dimen/default_content_padding">

        <EditText
            android:id="@+id/ean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:saveEnabled="true"
            android:minEms="@integer/ean_width"
            android:maxLength="@integer/ean_size"
            android:maxLines="1"
            android:hint="@string/input_hint" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/scan_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eancontainer"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_alignStart="@+id/eancontainer"
        android:layout_marginTop="@dimen/add_book_title_margintop"
        android:textSize="@dimen/head_line"
        android:textIsSelectable="true"
        android:textStyle="bold"
        tools:text="Book Title" />

    <TextView
        android:id="@+id/bookSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookTitle"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_alignStart="@+id/eancontainer"
        android:layout_marginTop="@dimen/add_book_subtitle_margintop"
        android:maxLines="3"
        android:ellipsize="end"
        tools:text="Sub Title: A story about a story" />

    <TextView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_book_authors_margintop"
        android:layout_below="@+id/bookSubTitle"
        android:layout_alignRight="@+id/eancontainer"
        android:layout_alignEnd="@+id/eancontainer"
        android:gravity="end"
        android:textSize="@dimen/text_size_micro"
        tools:text="Reto Meier" />

    <ImageView
        android:id="@+id/bookCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/authors"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_alignStart="@+id/eancontainer"
        android:contentDescription="@string/book_cover"
        tools:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/eancontainer"
        android:layout_alignStart="@+id/eancontainer"
        android:layout_below="@+id/bookCover"
        android:layout_marginTop="@dimen/add_book_categories_margintop"
        android:textSize="@dimen/text_size_micro"
        tools:text="Adventure | Action" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_gravity="center" >

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel_button"
            android:drawableLeft="@drawable/ic_action_discard"
            android:drawableStart="@drawable/ic_action_discard"
            style="?android:attr/buttonBarButtonStyle"
            android:visibility="invisible"
            tools:visibility="visible"
            tools:drawableLeft="@drawable/abc_ic_clear_mtrl_alpha" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:text="@string/ok_button"
            android:drawableLeft="@drawable/ic_action_accept"
            android:drawableStart="@drawable/ic_action_accept"
            style="?android:attr/buttonBarButtonStyle"
            android:visibility="invisible"
            tools:visibility="visible" />
    </LinearLayout>
</RelativeLayout>
